--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 
 <RadzenPanelMenu Style="width: contain">
     <RadzenPanelMenuItem Text="Home" Icon="home" Path=""></RadzenPanelMenuItem>
-    <RadzenPanelMenuItem Text="Conta" Icon="account_balance" Path="@AccountsRoutes.Index"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Contas" Icon="account_balance" Path="@AccountsRoutes.Index"></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Movimentações" Icon="attach_money" Path="@TransactionsRoutes.Index"></RadzenPanelMenuItem>
 </RadzenPanelMenu>
 
