--- a/Pages/Account/AccountsUpsert.razor
+++ b/Pages/Account/AccountsUpsert.razor
@@ -8,6 +8,8 @@
 ]
 @inherits General
 
+<PageTitle>Contas</PageTitle>
+
 @if (Loading) {
     <div class="rz-m-12">
         <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" />
